--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ header::after {
     height: 500px;
     background: whitesmoke;
     display: inline-block;
+    margin-top: 5px;
+}
+
+.item {
+    margin-top: 5px;
 }
 
 .logo {
@@ -32,6 +37,7 @@ header::after {
 
 nav {
     float: right;
+    padding: 5px;
 }
 
 nav ul {
@@ -42,7 +48,15 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 70px;
+    margin-left: 50px;
+}
+
+li p {
+    color: #494949 !important;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .item {
@@ -50,4 +64,22 @@ nav li {
     margin-left: 1px;
     background: #444;
     display: inline-block;
+}
+
+button {
+    color: #494949 !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: transparent;
+    padding: 5px;
+    border: 2px solid #494949 !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+}
+
+button:hover {
+    color: #ffffff !important;
+    background: #07006e;
+    border-color: #07006e !important;
+    transition: all 0.4s ease 0s;
 }
