--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header::after {
 
 #b_container {
     width: 1000px;
-    height: 500px;
+    height: 550px;
     background: whitesmoke;
     display: inline-block;
     margin-top: 5px;
@@ -32,12 +32,17 @@ header::after {
 .logo {
     float: left;
     height: 50px;
+    margin-top: 5px;
+    margin-left: 15px;
+}
+
+.h_container {
     padding: 5px;
 }
 
 nav {
     float: right;
-    padding: 5px;
+
 }
 
 nav ul {
@@ -48,13 +53,15 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-left: 50px;
+    margin-right: 45px;
+    margin-bottom: 5px;
+    vertical-align: middle;
 }
 
 li p {
     color: #494949 !important;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-size: 11px;
     text-transform: uppercase;
     text-decoration: none;
 }
@@ -83,3 +90,73 @@ button:hover {
     border-color: #07006e !important;
     transition: all 0.4s ease 0s;
 }
+
+
+/* The container */
+.container {
+    margin-top: 5px;
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 2px;
+    cursor: pointer;
+    font-size: 11px;
+    color: #494949;
+    font-family: Arial, Helvetica, sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background: transparent;
+  }
+  
+  /* Hide the browser's default radio button */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /*Radio buttons*/
+  /* Create a custom radio button */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 12px;
+    width: 12px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #494949;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .container .checkmark:after {
+       top: 4.5px;
+      left: 4.5px;
+      width: 3px;
+      height: 3px;
+      border-radius: 50%;
+      background: white;
+  }
